settings UI fixes major version update

--- a/cliqz@cliqz.com/chrome/content/options.html
+++ b/cliqz@cliqz.com/chrome/content/options.html
@@ -11,7 +11,7 @@
 		<button class="btn btn-feedback" data-action='feedback' onclick="">FEEDBACK</button>
 		<button class="btn btn-tutorial" data-action='tutorial'>TUTORIAL</button>
 		<button class="btn btn-faq" data-action='faq'>FAQ</button>
-		<button class="btn btn-privacy" data-action='privacy'>PRIVATSPHARE</button>
+		<button class="btn btn-privacy" data-action='privacy'>PRIVATSPHÄRE</button>
 	</div>
 	<div class='separator gear'></div>
 	<div class='option'>
@@ -43,7 +43,8 @@
 	</div>
 	-->
 	<center>
-		<button class="btn btn-save">Speichern und schließen</button>
+		<button class="btn btn-save" data-action='restore'>Zurücksetzen</button>
+		<button class="btn btn-restore">Speichern und schließen</button>
 	</center>
 	<script src="extern/jquery-1.10.2.js"></script>
 	<script src="extern/jquery-ui.1.10.4.js"></script>
