https://github.com/cliqz/bug-tracker/issues/132

--- a/cliqz@cliqz.com/chrome/content/options.html
+++ b/cliqz@cliqz.com/chrome/content/options.html
@@ -42,9 +42,10 @@
 		Deine Firefox-Extension ist auf dem aktuellsten Stand
 	</div>
 	-->
-	<center>
-		<button class="btn btn-save" data-action='restore'>Zurücksetzen</button>
-		<button class="btn btn-restore">Speichern und schließen</button>
+	<center id='buttonContainer'>
+		<!-- <button class="btn btn-save" data-action='restore'>Zurücksetzen</button> -->
+		<button class="btn btn-cancel" data-action='close'>Abbrechen</button>
+		<button class="btn btn-save" data-action='save'>Speichern und schließen</button>
 	</center>
 	<script src="extern/jquery-1.10.2.js"></script>
 	<script src="extern/jquery-ui.1.10.4.js"></script>
