option for loading in private mode - default true https://github.com/cliqz/bug-tracker/issues/137

--- a/cliqz@cliqz.com/chrome/content/options.html
+++ b/cliqz@cliqz.com/chrome/content/options.html
@@ -36,6 +36,12 @@
 		</div>
 	</div>
 	<br>
+	<div class='option'>
+		<span class='option-text'>cliqz im privaten Modus aktivieren</span>
+		&nbsp;&nbsp;
+		<input type="checkbox" id="inPrivateWindows">
+	</div>
+
 	<div class='separator'></div>
 	<!--
 	<div class='update'>
