change search engine from settings page

--- a/cliqz@cliqz.com/chrome/content/options.html
+++ b/cliqz@cliqz.com/chrome/content/options.html
@@ -41,6 +41,12 @@
         &nbsp;&nbsp;
         <input type="checkbox" id="inPrivateWindows">
     </div>
+    <div class='option'>
+        <span class='option-text'>Default Search Engine</span>
+        &nbsp;&nbsp;
+        <select id='searchEngines'>
+        </select>
+    </div>
 
     <div class='separator'></div>
     <!--
