custom search complete + bugs + wordings + logging

--- a/cliqz@cliqz.com/chrome/content/options.html
+++ b/cliqz@cliqz.com/chrome/content/options.html
@@ -15,11 +15,12 @@
     </div>
     <div class='separator gear'></div>
     <div class='option'>
-        <span class='option-text'>Anzahl dargestellter Ergebnisse</span>
+        <span class='option-text'>Größe des Ergebnis-Dropdowns</span>
         <div class='option-control'>
             <div id="results-slider"></div>
         </div>
         <label id="lblresults" class='option-text'></label>
+        <label class='option-text'>Zeilen</label>
     </div>
     <br>
 
@@ -42,9 +43,9 @@
         <input type="checkbox" id="inPrivateWindows">
     </div>
     <div class='option'>
-        <span class='option-text'>Default Search Engine</span>
+        <span class='option-text' title='Egal welche Deine bevorzugte Suchmaschine ist - navigiere direkt auf spezielle Seiten mit den angegebenen Kürzeln, z.B. „#am Star Wars“ + Enter um Star Wars-Ergebnisse auf Amazon.de angezeigt zu bekommen.'>Standard-Suchmaschine (?)</span>
         &nbsp;&nbsp;
-        <select id='searchEngines'>
+        <select class='option-control' id='searchEngines'>
         </select>
     </div>
 
