help button on options page

--- a/cliqz@cliqz.com/chrome/content/options.html
+++ b/cliqz@cliqz.com/chrome/content/options.html
@@ -43,10 +43,10 @@
         <input type="checkbox" id="inPrivateWindows">
     </div>
     <div class='option'>
-        <span class='option-text' title='Egal welche Deine bevorzugte Suchmaschine ist - navigiere direkt auf spezielle Seiten mit den angegebenen Kürzeln, z.B. „#am Star Wars“ + Enter um Star Wars-Ergebnisse auf Amazon.de angezeigt zu bekommen.'>Standard-Suchmaschine (?)</span>
+        <span class='option-text'>Standard-Suchmaschine</span>
         &nbsp;&nbsp;
-        <select class='option-control' id='searchEngines'>
-        </select>
+        <select class='option-control' id='searchEngines'></select>
+        <span class='option-text help' title='Egal welche Deine bevorzugte Suchmaschine ist - navigiere direkt auf spezielle Seiten mit den angegebenen Kürzeln, z.B. „#am Star Wars“ + Enter um Star Wars-Ergebnisse auf Amazon.de angezeigt zu bekommen.'>?</span>
     </div>
 
     <div class='separator'></div>
