--- a/cliqz@cliqz.com/chrome/content/options.html
+++ b/cliqz@cliqz.com/chrome/content/options.html
@@ -61,7 +61,7 @@
         <button class="btn btn-save" data-action='save'>Speichern und schließen</button>
     </center>
     <script src="extern/jquery-1.10.2.js"></script>
-    <script src="extern/jquery-ui.1.10.4.js"></script>
+    <script src="extern/jquery-ui-1.10.3.min.js"></script>
     <script src="utils.js"></script>
     <script src="options.js"></script>
 </body>
