--- a/cliqz@cliqz.com/chrome/content/cliqz.html
+++ b/cliqz@cliqz.com/chrome/content/cliqz.html
@@ -9,13 +9,18 @@
     <script type="text/javascript" src="chrome://cliqz/content/UI.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.js"></script>
     <style type="text/css">
-        body {
+        html, body {
             margin: 0px;
             padding: 0px;
+            height: 100%;
         }
         #container{
             width: 800px;
             margin: auto;
+        }
+
+        #cliqz-results {
+          height: 100% !important;
         }
     </style>
 </head>
