--- a/cliqz@cliqz.com/chrome/content/debug.html
+++ b/cliqz@cliqz.com/chrome/content/debug.html
@@ -34,8 +34,11 @@
     };
 
     function historySearch(searchTerm) {
-        CliqzHistoryDebug.getHistory(searchTerm, function(history){
-            showResultTable(history);
+        CliqzHistoryDebug.getHistoryFirefox(searchTerm, function(history){
+            showResultTableFirefox(history);
+        });
+        CliqzHistoryDebug.getHistoryCliqz(searchTerm, function(history){
+            showResultTableCliqz(history);
         });
     }
 
@@ -43,34 +46,66 @@
         historySearch($("#searchInput").val());
     }
 
-    function showResultTable(data) {
-        $("#resultTable").html("");
-        $("#resultTable").append("<th>Provider</th>");
-        $("#resultTable").append("<th>Title</th>");
-        $("#resultTable").append("<th>URL</th>");
-        $("#resultTable").append("<th>Count</th>");
-        $("#resultTable").append("<th>Typed</th>");
-        $("#resultTable").append("<th>Frecency</th>");
-        $("#resultTable").append("<th>Last Visit</th>");
+    function showResultTableFirefox(data) {
+        $("#resultTableFirefox").html("");
+        $("#resultTableFirefox").append("<th>Provider</th>");
+        $("#resultTableFirefox").append("<th>Title</th>");
+        $("#resultTableFirefox").append("<th>URL</th>");
+        $("#resultTableFirefox").append("<th>Count</th>");
+        $("#resultTableFirefox").append("<th>Typed</th>");
+        $("#resultTableFirefox").append("<th>Frecency</th>");
+        $("#resultTableFirefox").append("<th>Last Visit</th>");
         for (var i = 0; i < data.length; i++) {
-            $("#resultTable").append("<tr>");
-            $("#resultTable tr").last().append("<td>History</td>");
-            $("#resultTable tr").last().append("<td>" + data[i].title + "</td>");
-            $("#resultTable tr").last().append("<td><a href='" + data[i].url + "'>" + data[i].url + "</a></td>");
-            $("#resultTable tr").last().append("<td>" + data[i].visit_count + "</td>");
-            $("#resultTable tr").last().append("<td>" + data[i].typed + "</td>");
-            $("#resultTable tr").last().append("<td>" + data[i].frecency + "</td>");
+            $("#resultTableFirefox").append("<tr>");
+            $("#resultTableFirefox tr").last().append("<td>Firefox</td>");
+            $("#resultTableFirefox tr").last().append("<td>" + data[i].title + "</td>");
+            $("#resultTableFirefox tr").last().append("<td><a href='" + data[i].url + "'>" + data[i].url + "</a></td>");
+            $("#resultTableFirefox tr").last().append("<td>" + data[i].visit_count + "</td>");
+            $("#resultTableFirefox tr").last().append("<td>" + data[i].typed + "</td>");
+            $("#resultTableFirefox tr").last().append("<td>" + data[i].frecency + "</td>");
             var date = new Date(data[i].last_visit_date/1000);
-            $("#resultTable tr").last().append("<td>" + date.toLocaleDateString() + "<br>" + date.toLocaleTimeString() + "</td>");
-            $("#resultTable").append("</tr>");
+            $("#resultTableFirefox tr").last().append("<td>" + date.toLocaleDateString() + "<br>" + date.toLocaleTimeString() + "</td>");
+            $("#resultTableFirefox").append("</tr>");
         };    
-        $("#resultTable").append("</table>");    
+        $("#resultTableFirefox").append("</table>");    
+    }
+
+    function showResultTableCliqz(data) {
+        $("#resultTableCliqz").html("");
+        $("#resultTableCliqz").append("<th>Provider</th>");
+        $("#resultTableCliqz").append("<th>Title</th>");
+        $("#resultTableCliqz").append("<th>URL</th>");
+        $("#resultTableCliqz").append("<th>Typed</th>");
+        $("#resultTableCliqz").append("<th>Link</th>");
+        $("#resultTableCliqz").append("<th>Result</th>");
+        $("#resultTableCliqz").append("<th>Autocomplete</th>");
+        $("#resultTableCliqz").append("<th>Google</th>");
+        $("#resultTableCliqz").append("<th>Query</th>");
+        for (var i = 0; i < data.length; i++) {
+            $("#resultTableCliqz").append("<tr>");
+            $("#resultTableCliqz tr").last().append("<td>cliqz</td>");
+            $("#resultTableCliqz tr").last().append("<td>" + data[i].title + "</td>");
+            $("#resultTableCliqz tr").last().append("<td><a href='" + data[i].url + "'>" + data[i].url + "</a></td>");
+            $("#resultTableCliqz tr").last().append("<td>" + data[i].typed + "</td>");
+            $("#resultTableCliqz tr").last().append("<td>" + data[i].link + "</td>");
+            $("#resultTableCliqz tr").last().append("<td>" + data[i].result + "</td>");
+            $("#resultTableCliqz tr").last().append("<td>" + data[i].autocomplete + "</td>");
+            $("#resultTableCliqz tr").last().append("<td>" + data[i].google + "</td>");
+            $("#resultTableCliqz tr").last().append("<td>" + data[i].last_query + "</td>");
+            //var date = new Date(data[i].last_visit_date/1000);
+            //$("#resultTableCliqz tr").last().append("<td>" + date.toLocaleDateString() + "<br>" + date.toLocaleTimeString() + "</td>");
+            $("#resultTableCliqz").append("</tr>");
+        };    
+        $("#resultTableCliqz").append("</table>");    
     }
     </script>
 </head>
 <body>
     <h1>Search Debug</h1>
     <p><input type="text" id='searchInput'><input type="submit" value="Search" onclick='startSearch()'></p>
-    <div id='resultWrapper'><table id="resultTable" border="0" cellspacing="1" cellpadding="4" bordercolor="white"></table></div>
+    <div id='resultWrapper'>
+    <table id="resultTableFirefox" border="0" cellspacing="1" cellpadding="4" bordercolor="white"></table>
+    <table id="resultTableCliqz" border="0" cellspacing="1" cellpadding="4" bordercolor="white"></table>
+    </div>
 </body>
 </html>
