--- a/cliqz@cliqz.com/chrome/content/stats.html
+++ b/cliqz@cliqz.com/chrome/content/stats.html
@@ -20,7 +20,23 @@
       Und weil Du auf einer Suchmaschinen-Ergebnisseite im Schnitt 3,5 Sekunden verbringst,
       hat cliqz Dir zusätzlich {{{b stats.timeTot }}} Minuten Deiner wertvollen Zeit gespart.
       <br/><br/>
-      Diese Statistik auf Facebook | Twitter | Google+ posten.
+      Diese Statistik auf
+      <a href="https://www.facebook.com/sharer/sharer.php?u=beta.cliqz.com"
+        onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"
+        target="_blank" title="Share on Facebook">Facebook
+      </a>
+      |
+      <a href="https://twitter.com/share?url=beta.cliqz.com&text=Cliqz%20saved%20me%20{{ stats.timeTot }}%20Minutes"
+         onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"
+         target="_blank" title="Share on Twitter">Twitter
+      </a>
+      |
+      <a href="https://plus.google.com/share?url=beta.cliqz.com"
+         onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=350,width=480');return false;"
+         target="_blank" title="Share on Google+">Google+
+      </a>
+
+ posten.
     </script>
     <title>Cliqz</title>
 
@@ -33,7 +49,7 @@
             text-align: left;
             background-color: lightgreen;
             border-radius: 5px;
-            padding: 5px;
+            padding: 15px;
         }
     </style>
 </head>
