localise numbers from stats page

--- a/cliqz@cliqz.com/chrome/content/stats.html
+++ b/cliqz@cliqz.com/chrome/content/stats.html
@@ -15,7 +15,7 @@
       <br/><br/>
 
       Zusätzlich hat cliqz Dir damit {{{b stats.adsTot }}} Werbeplatzierungen erspart
-      (Google zeigt im Schnitt 7 gekaufte Links auf seinen Suchergebnis-Seiten an).
+      (eine Suchmaschine zeigt im Schnitt 7 gekaufte Links auf seinen Suchergebnis-Seiten an).
       <br/><br/>
       Und weil Du auf einer Suchmaschinen-Ergebnisseite im Schnitt 3,5 Sekunden verbringst,
       hat cliqz Dir zusätzlich {{{b stats.timeTot }}} Minuten Deiner wertvollen Zeit gespart.
@@ -26,7 +26,7 @@
         target="_blank" title="Share on Facebook">Facebook
       </a>
       |
-      <a href="https://twitter.com/share?url=beta.cliqz.com&text=Cliqz%20saved%20me%20{{ stats.timeTot }}%20Minutes"
+      <a href="https://twitter.com/share?url=beta.cliqz.com&text=Cliqz%20saved%20me%20{{ stats.timeTot }}%20minutes%20over%20the%20last%207%20days"
          onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"
          target="_blank" title="Share on Twitter">Twitter
       </a>
