--- a/cliqz@cliqz.com/chrome/content/stats.html
+++ b/cliqz@cliqz.com/chrome/content/stats.html
@@ -4,19 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="chrome://cliqz/content/libs/handlebars-v1.3.0.js"></script>
-    <script id="stats-template" type="text/x-handlebars-template">
-      <div id='statsText'></div>
-
-      <br/><br/><br/><br/>
-
-      <div class='share-box'>
-          <div class='share-sample'>
-            <i id='statsShareMsg'></i>
-          </div>
-          <br/>
-          Diese Statistik auf
-          <span class='twitter-box'>
+    <script id="share-template" type="text">
+      <span class='twitter-box'>
           <a id='shareTwitter'
              href="https://twitter.com/share?url=beta.cliqz.com&text="
              onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;"
@@ -24,10 +13,9 @@
              target="_blank" title="Share on Twitter">
                 <span class='twitter'></span>Twitter
           </a>
-          </span>
-          posten.
-    </div>
+      </span>
     </script>
+
     <title>Cliqz</title>
 
     <style type="text/css">
@@ -65,6 +53,7 @@
             cursor: pointer;
             padding-top: 5px;
             margin-right: 10px;
+            padding-right: 5px;
         }
 
         .share-box {
@@ -78,19 +67,27 @@
     <div id='debug'></div>
     <br />
     <center>
-        <div id='content'></div>
+        <div id='content'>
+          <div id='statsText'></div>
+          <br/><br/><br/><br/>
+          <div class='share-box'>
+              <div class='share-sample'>
+                <i id='statsShareMsg'></i>
+              </div>
+              <br/>
+              <div id='shareAction'></div>
+          </div>
+        </div>
     </center>
     <script type="text/javascript">
     Components.utils.import('chrome://cliqzmodules/content/CliqzStats.jsm');
 
-    var rawTpl = document.getElementById('stats-template').innerHTML,
-        tpl = Handlebars.compile(rawTpl),
-        stats = CliqzStats.get();
+    var stats = CliqzStats.get();
 
-    document.getElementById('content').innerHTML = tpl();
     document.getElementById('statsText').innerHTML = stats.text;
     document.getElementById('statsShareMsg').innerHTML = stats.shareMsg;
-    document.getElementById('shareTwitter').href += encodeURIComponent(stats.shareMsg);
+    document.getElementById('shareAction').innerHTML = stats.shareAction.replace('{}', document.getElementById('share-template').innerHTML);
+    //document.getElementById('shareTwitter').href += encodeURIComponent(stats.shareMsg);
 
     </script>
 </body>
