remove obsolete attribute - selectable hand on history pattern titles

--- a/cliqz@cliqz.com/cliqz-tab/new-new-tab/newtab.html
+++ b/cliqz@cliqz.com/cliqz-tab/new-new-tab/newtab.html
@@ -18,7 +18,7 @@
             Shortcut removed. <span id="history-undo">Undo</span> or <span id="history-undo-all">Restore All</span>
             <div class="dismiss"></div>
         </div>
-        
+
         <div class="white-cover" style="height: 100%">
             <div class="background">
                 <div class="container search-container">
@@ -30,9 +30,9 @@
                 </div>
             </div>
         </div>
-        
+
         <!-- templates -->
-        <a href="/" target="_top" class="hidden mostvisited" id="history-row-template" selectable="selectable">
+        <a href="/" target="_top" class="hidden mostvisited" id="history-row-template">
             <div class="history-row">
                 <div class="close"></div>
                 <div class="pin"></div>
