--- a/cliqz@cliqz.com/chrome/content/update.html
+++ b/cliqz@cliqz.com/chrome/content/update.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;URL=http://beta.cliqz.com/latest">
+    <meta http-equiv="refresh" content="0;URL=http://cliqz.com/latest">
 
     <title>Cliqz Update</title>
 </head>
