--- a/cliqz@cliqz.com/chrome/content/offboarding.html
+++ b/cliqz@cliqz.com/chrome/content/offboarding.html
@@ -8,7 +8,7 @@
 
     <style type="text/css">
         .back {
-            background-image: url('http://cdn.cliqz.com/extension/offboarding/back.jpg');
+            background-image: url('https://cdn.cliqz.com/extension/offboarding/back.jpg');
             background-repeat: no-repeat;
             background-size: cover;
         }
@@ -59,7 +59,7 @@
 </head>
 <body class='back' onbeforeunload='closePage(event)'>
     <h1 class='header'>
-        <img class="logo" src="http://cdn.cliqz.com/extension/offboarding/logo.svg">
+        <img class="logo" src="https://cdn.cliqz.com/extension/offboarding/logo.svg">
         <span class='cliqz-locale' key='offTitle'></span>
     </h1>
     <div class='mid cliqz-locale' key='offMessage'>
