--- a/cliqz@cliqz.com/chrome/content/onboarding/onboarding.html
+++ b/cliqz@cliqz.com/chrome/content/onboarding/onboarding.html
@@ -28,7 +28,9 @@
     <link rel="stylesheet" href="css/font-awesome.css">    
     <link rel="stylesheet" href="css/index.css">    
     <link rel="stylesheet" href="css/gallery.css">    
-    <link rel="stylesheet" href="css/gallery-theme.css">    
+    <link rel="stylesheet" href="css/gallery-theme.css"> 
+
+    <script type="text/javascript" src="chrome://cliqz/content/onboarding/scripts/onboarding.js"></script>
 
 </head>
 <body class="onboarding onboarding " onbeforeunload='unload();' onload='init();'>
@@ -69,42 +71,5 @@
 <div>
     <a class="button button-primary button-cancel enabled cliqz-locale" id='tour-btn-cancel' key="onButtonCancel">(cancel)</a>
 </div>
-
-<script type="text/javascript">
-    Components.utils.import('chrome://cliqzmodules/content/CliqzTour.jsm');
-    Components.utils.import('chrome://cliqzmodules/content/CliqzUtils.jsm');
-
-    try {                
-        var now = new Date(), lang = CliqzUtils.getLanguage(window),
-            btn = document.getElementById('tour-btn'),
-            btnCancel = document.getElementById('tour-btn-cancel');       
-                      
-        var unload = function () {
-            CliqzTour.unload();
-        }
-
-        var init = function () {
-            CliqzUtils.localizeDoc(document);
-
-            CliqzTour.init();
-
-            btn.addEventListener('click', function () {
-                CliqzTour.start();    
-            });
-
-            btnCancel.addEventListener('click', function () {
-                CliqzTour.cancel();
-            });
-
-            btnCancel.addEventListener('mouseover', function () {
-                // close popup to focus on main window; otherwise user has to click twice
-                CliqzTour.hideCallout();                              
-                CliqzTour.hideCursor();
-            });           
-        };
-    } catch (e) {
-        CliqzUtils.log('CliqzTour', e);
-    }
-</script>
 
 </body></html>
