changing main message on page after demo ran through to invite users to try it out

--- a/cliqz@cliqz.com/chrome/content/onboarding/onboarding.html
+++ b/cliqz@cliqz.com/chrome/content/onboarding/onboarding.html
@@ -43,7 +43,7 @@
 	<figure class="item green">
 		<h1>
             <div class="arrow-top">Arrow Top</div> 
-            <div style="display: inline; padding: 0px;" class="cliqz-locale" key="onMsgInstalled"></div>			
+            <div style="display: inline; padding: 0px;" class="cliqz-locale" key="onMsgInstalled" id="message-installed"></div>			
 		</h1>
 		<h3>
             <span class="cliqz-locale" key="onMsgExplanation">
