showing callout with button to start tour below URL when on-boarding page is loaded—instead of having start button on web page

--- a/cliqz@cliqz.com/chrome/content/onboarding/onboarding.html
+++ b/cliqz@cliqz.com/chrome/content/onboarding/onboarding.html
@@ -42,7 +42,7 @@
 <div class="gallery items-3" id="main-page">	
 	<figure class="item green">
 		<h1>
-            <div class="arrow-top">Arrow Top</div> 
+            <!-- <div class="arrow-top">Arrow Top</div>  -->
             <div style="display: inline; padding: 0px;" class="cliqz-locale" key="onMsgInstalled" id="message-installed"></div>			
 		</h1>
 		<h3>
@@ -51,8 +51,7 @@
         </h3>
         
         <div class="onboarding-cliqz-logo">
-		  <a class="button button-primary enabled cliqz-locale" id='tour-btn' key="onButtonTryOut">(start)</a>
-		  
+		  <a class="button button-primary enabled cliqz-locale" style="visibility: collapse;" id='tour-btn' key="onButtonTryOut">(start)</a>		  
         </div> 
 	</figure>
 
