formatted buttons revised German text

--- a/cliqz@cliqz.com/chrome/content/onboarding/onboarding.html
+++ b/cliqz@cliqz.com/chrome/content/onboarding/onboarding.html
@@ -41,7 +41,7 @@
 
 <div class="gallery items-3" id="main-page">	
 	<figure class="item green">
-		<h1>
+		<h1 style="margin-top: 50px;">
             <!-- <div class="arrow-top">Arrow Top</div>  -->
             <div style="display: inline; padding: 0px;" class="cliqz-locale" key="onMsgInstalled" id="message-installed"></div>			
 		</h1>
