--- a/cliqz@cliqz.com/chrome/content/tests/index.html
+++ b/cliqz@cliqz.com/chrome/content/tests/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/2.2.5/mocha.css"/>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mocha/2.2.5/mocha.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.0.0/chai.js"></script>
+<link rel="stylesheet" type="text/css" href="chrome://cliqz/content/tests/static/mocha2_2_5.css"/>
+  <script src="chrome://cliqz/content/tests/static/jquery2_1_4.js"></script>
+  <script type="text/javascript" src="chrome://cliqz/content/tests/static/mocha2_2_5.js"></script>
+  <script type="text/javascript" src="chrome://cliqz/content/tests/static/chai3_0_0.js"></script>
   <script>TESTS = Object.create(null);</script>
   <script src="chrome://cliqz/content/tests/unit/CliqzUtilsTest.js"></script>
   <script src="chrome://cliqz/content/tests/integration/UrlBarTest.js"></script>
