--- a/cliqz@cliqz.com/chrome/content/tests/index.html
+++ b/cliqz@cliqz.com/chrome/content/tests/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
 <link rel="stylesheet" type="text/css" href="chrome://cliqz/content/tests/static/mocha2_2_5.css"/>
   <script type="text/javascript" src="chrome://cliqz/content/tests/static/mocha2_2_5.js"></script>
   <script type="text/javascript" src="chrome://cliqz/content/tests/static/chai3_0_0.js"></script>
