handle clicking on a link and write some basic tests

--- a/cliqz@cliqz.com/chrome/content/tests/index.html
+++ b/cliqz@cliqz.com/chrome/content/tests/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="chrome://cliqz/content/tests/static/mocha2_2_5.css"/>
   <script type="text/javascript" src="chrome://cliqz/content/tests/static/mocha2_2_5.js"></script>
   <script type="text/javascript" src="chrome://cliqz/content/tests/static/chai3_0_0.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
   <script>TESTS = Object.create(null);</script>
   <script src="chrome://cliqz/content/tests/unit/CliqzUtilsTest.js"></script>
   <script src="chrome://cliqz/content/tests/integration/UrlBarTest.js"></script>
