Static depenencies managed by bower

--- a/cliqz@cliqz.com/tests/index.html
+++ b/cliqz@cliqz.com/tests/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 
-<link rel="stylesheet" type="text/css" href="chrome://cliqztests/content/static/mocha2_2_5.css"/>
-  <script type="text/javascript" src="chrome://cliqztests/content/static/mocha2_2_5.js"></script>
-  <script type="text/javascript" src="chrome://cliqztests/content/static/chai3_0_0.js"></script>
-  <script type="text/javascript" src="chrome://cliqztests/content/static/jquery2_1_4.js"></script>
+  <link rel="stylesheet" type="text/css" href="resource://cliqz_bower_components/mocha/mocha.css"/>
+  <script type="text/javascript" src="resource://cliqz_bower_components/mocha/mocha.js"></script>
+  <script type="text/javascript" src="resource://cliqz_bower_components/chai/chai.js"></script>
+  <script type="text/javascript" src="resource://cliqz_bower_components/jquery/dist/jquery.js"></script>
   <script>TESTS = Object.create(null);</script>
   <script src="chrome://cliqztests/content/unit/CliqzUtilsTest.js"></script>
   <script src="chrome://cliqztests/content/integration/UrlBarTest.js"></script>
