--- a/specific/iOS/index.html
+++ b/specific/iOS/index.html
@@ -5,16 +5,13 @@
 <!--		<link rel="icon" href="/tool/skin/cliqz.png" type="image/x-icon">-->
 				<link href="generic/static/skin/brands.css" rel="stylesheet" type="text/css">
 					<link href="generic/static/skin/browser.css" rel="stylesheet" type="text/css">
-						<link href="iOS/browser_iOS.css" rel="stylesheet" type="text/css">
+						<link href="iOS/css/browser_iOS.css" rel="stylesheet" type="text/css">
 						<link href="iOS/css/style.css" rel="stylesheet" type="text/css">
-<!--							<link href="mobile/browser_mobile_.css" rel="stylesheet" type="text/css">-->
-<!--								<link href="generic/static/skin/browser_progress.css" rel="stylesheet" type="text/css">-->
-							<script src="iOS/js/environment.js"></script>
+								<script src="iOS/js/environment.js"></script>
 							<script src="js/libs.js"></script>
 							<script src="js/global.js"></script>
 							<script src="js/local.js"></script>
-							<link href="iOS/style.css" rel="stylesheet" type="text/css">
-							<script src="iOS/UI_iOS.js"></script>
+							<script src="generic/modules/local/UI.js"></script>
 							</head>
 	<body>
 		<input id="urlbar" autofocus="true">
