use content instead of resource & use polyfills for promises to support older versions of Firefox

--- a/cliqz@cliqz.com/tests/index.html
+++ b/cliqz@cliqz.com/tests/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 
-  <link rel="stylesheet" type="text/css" href="resource://cliqz_bower_components/mocha/mocha.css"/>
-  <script type="text/javascript" src="resource://cliqz_bower_components/mocha/mocha.js"></script>
-  <script type="text/javascript" src="resource://cliqz_bower_components/chai/chai.js"></script>
-  <script type="text/javascript" src="resource://cliqz_bower_components/jquery/dist/jquery.js"></script>
+  <link rel="stylesheet" type="text/css" href="chrome://cliqz_bower_components/content/mocha/mocha.css"/>
+  <script type="text/javascript" src="chrome://cliqz_bower_components/content/mocha/mocha.js"></script>
+  <script type="text/javascript" src="chrome://cliqz_bower_components/content/chai/chai.js"></script>
+  <script type="text/javascript" src="chrome://cliqz_bower_components/content/jquery/dist/jquery.js"></script>
+  <!--<script src="https://www.promisejs.org/polyfills/promise-7.0.1.min.js"></script>-->
+  <script type="text/javascript" src="chrome://cliqz_bower_components/content/core.js/client/core.js"></script>
   <script>TESTS = Object.create(null);</script>
   <script src="chrome://cliqztests/content/unit/CliqzUtilsTest.js"></script>
   <script src="chrome://cliqztests/content/integration/UrlBarTest.js"></script>
