--- a/cliqz@cliqz.com/tests/index.html
+++ b/cliqz@cliqz.com/tests/index.html
@@ -7,9 +7,12 @@
   <script type="text/javascript" src="chrome://cliqz_bower_components/content/chai/chai.js"></script>
   <script type="text/javascript" src="chrome://cliqz_bower_components/content/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="chrome://cliqz_bower_components/content/core.js/client/core.js"></script>
-  <script>TESTS = Object.create(null);</script>
+  <script>window.TESTS = {};</script>
+  <script src="chrome://cliqztests/content/test-helpers.js"></script>
   <script src="chrome://cliqztests/content/unit/CliqzUtilsTest.js"></script>
   <script src="chrome://cliqztests/content/integration/UrlBarTest.js"></script>
+  <script src="chrome://cliqztests/content/integration/SmartCliqzTest.js"></script>
+
 
   </head>
   <body>
