--- a/cliqz@cliqz.com/tests/index.html
+++ b/cliqz@cliqz.com/tests/index.html
@@ -10,6 +10,7 @@
   <script>window.TESTS = {};</script>
   <script src="chrome://cliqztests/content/test-helpers.js"></script>
   <script src="chrome://cliqztests/content/unit/CliqzUtilsTest.js"></script>
+  <script src="chrome://cliqztests/content/unit/CliqzHistoryPatternTest.js"></script>
   <script src="chrome://cliqztests/content/integration/UrlBarTest.js"></script>
   <script src="chrome://cliqztests/content/integration/SmartCliqzTest.js"></script>
 
