Gruntfile and AndroidKit updated for Lightning build

--- a/specific/androidkit/index.html
+++ b/specific/androidkit/index.html
@@ -2,20 +2,18 @@
 <html>
 	<head>
 		<title>developer tool</title>
-<!--		<link rel="icon" href="/tool/skin/cliqz.png" type="image/x-icon">-->
-				<link href="generic/static/skin/brands.css" rel="stylesheet" type="text/css">
-					<link href="generic/static/skin/browser.css" rel="stylesheet" type="text/css">
-						<link href="css/browser_iOS.css" rel="stylesheet" type="text/css">
-						<link href="css/style.css" rel="stylesheet" type="text/css">
-								<script src="js/environment.js"></script>
-							<script src="js/libs.js"></script>
-							<script src="js/global.js"></script>
-							<script src="js/local.js"></script>
-							<script src="generic/modules/local/UI.js"></script>
-							</head>
+		<link href="skin/brands.css" rel="stylesheet" type="text/css">
+		<link href="skin/browser.css" rel="stylesheet" type="text/css">
+		<link href="css/browser_iOS.css" rel="stylesheet" type="text/css">
+		<link href="css/style.css" rel="stylesheet" type="text/css">
+		<script src="js/environment.js"></script>
+		<script src="js/libs.js"></script>
+		<script src="js/global.js"></script>
+		<script src="js/local.js"></script>
+	</head>
 	<body>
 		<input id="urlbar" autofocus="true">
-			<div id="results"></div>
-			<script src="js/debug.js"></script>
+		<div id="results"></div>
+		<script src="js/debug.js"></script>
 	</body>
 </html>
