Request Health Monitor
other important changes:
* fab install_in_browser working with node_modules

--- a/specific/firefox/cliqz@cliqz.com/tests/index.html
+++ b/specific/firefox/cliqz@cliqz.com/tests/index.html
@@ -13,6 +13,7 @@
   <script src="chrome://cliqztests/content/unit/CliqzHistoryPatternTest.js"></script>
   <script src="chrome://cliqztests/content/unit/CliqzMsgCenterTest.js"></script>
   <script src="chrome://cliqztests/content/unit/CliqzResultProviders.js"></script>
+  <script src="chrome://cliqztests/content/unit/CliqzRequestMonitorTest.js"></script>
   <script src="chrome://cliqztests/content/integration/UrlBarTest.js"></script>
   <script src="chrome://cliqztests/content/integration/TelemetryTest.js"></script>
   <script src="chrome://cliqztests/content/integration/SmartCliqzTest.js"></script>
@@ -33,6 +34,7 @@
     }
   </style>
   </head>
+
   <body>
 
         <center><button class="btn btn-1 btn-1a" onclick="location.reload(true);">Reload</button></center>
