Native scrolling on mobile. Prevent opening of urls for development mode so swiping is easier.

--- a/specific/androidkit/index.html
+++ b/specific/androidkit/index.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title>developer tool</title>
-		<link href="skin/brands.css" rel="stylesheet" type="text/css">
-		<link href="skin/browser.css" rel="stylesheet" type="text/css">
-		<link href="css/browser_iOS.css" rel="stylesheet" type="text/css">
 		<link href="css/style.css" rel="stylesheet" type="text/css">
+		<link href="skin/mobile/style-slide.css" rel="stylesheet" type="text/css">
 		<script src="js/environment.js"></script>
 		<script src="js/libs.js"></script>
+		<script src="js/viewpager.js"></script>
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1" />
 		<script src="js/global.js"></script>
 		<script src="js/local.js"></script>
 	</head>
